# mcversion-enum-rs

./: Cargo.toml  LICENSE-Apache-2.0.txt  LICENSE-MIT.txt  build.rs
.github/workflows/: release-binary.yml  rust.yml
src/: lib.rs
