[package]
name = "mcversion-enum-rs"
version = "0.1.0"
edition = "2021"
description = "Exhaustive enum of Minecraft versions"
license = "Apache-2.0 OR MIT"
authors = ["Kisaragi Marine <kisaragi.effective@gmail.com>"]
keywords = ["minecraft"]
categories = ["parsing"]
repository = "https://github.com/KisaragiEffective/minecraft-version-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"] }
